2003-10-20  Zack Weinberg  <zack@codesourcery.com>
                                                                                
	* config/i386/i386.c (print_reg): Abort if REGNO (x) is a
	virtual register, but only if file == asm_out_file.
	* config/i386/i386.h (HI_REGISTER_NAMES): Use "argp", not "",
	for ARG_POINTER_REGNUM.

2003-10-17  Ulrich Weigand  <uweigand@de.ibm.com>

	* ifcvt.c (noce_try_addcc): Handle ifs with 'else' case.

2003-10-17  Ulrich Weigand  <uweigand@de.ibm.com>

	* combine.c (simplify_set): Do not clear out undobuf.other_insn
	already set elsewhere.

2003-10-17  Kelley Cook  <kcook@gcc.gnu.org>

	* config/i386/i386.c (ix86_expand_prologue):  Use
	gen_allocate_stack_worker.

2003-10-17  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config.gcc (mips-sgi-irix6*o32): Only enable use_collect2
	without gas.
	(mips-sgi-irix6*): Likewise.

	* config/mips/iris6gas.h: New file.
	* gcc/config.gcc (mips-sgi-irix6*): Use it.

	* config/mips/mips.h (TARGET_IRIX): Provide default.
	(TARGET_IRIX5): Likewise.
	(TARGET_SGI_O32_AS): Likewise.
	* config/mips/iris5.h (TARGET_IRIX): Redefine as 1.
	(TARGET_IRIX5): Likewise.
	* config/mips/iris6.h (TARGET_IRIX6): Remove.
	(TARGET_IRIX5): Redefine as 0.

	* config/mips/mips.c (mips_output_external): Test for IRIX 6 O32
	linker workaround with TARGET_IRIX and mips_abi instead of
	ASM_OUTPUT_UNDEF_FUNCTION.
	(mips_file_end): Inline old ASM_OUTPUT_UNDEF_FUNCTION definition,
	testing TARGET_IRIX and mips_abi explicitly.
	* config/mips/iris5.h (ASM_OUTPUT_UNDEF_FUNCTION): Remove.
	* config/mips/iris6.h (ASM_OUTPUT_UNDEF_FUNCTION): Remove undef.

	* config/mips/mips.c (irix_output_external_libcall): Renamed from
	mips_output_external_libcall.
	Use new TARGET_IRIX in guard.
	* config/mips/mips-protos.h (irix_output_external_libcall): Match
	this.
	* config/mips/iris5.h (TARGET_ASM_EXTERNAL_LIBCALL): Likewise.

	* config/mips/iris5gas.h (HAVE_GAS_SHF_MERGE): Update comment.
	Define as 0.
